--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 6f1b1d14-d722-44c8-b46a-7c2bf332c773
 name: drubuild
 mail: cassandrasmith303@gmail.com
-slogan: ''
+slogan: 'installed through build tools yay'
 page:
   403: ''
   404: ''
